build/log/idf_py_stdout_output_35700
[1/19] Performing build step for 'bootloader'
[1/1] cd /home/nhat/esp/myGUI/build/bootloader/esp-idf/esptool_py && /home/nhat/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/nhat/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/nhat/esp/myGUI/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/19] No install step for 'bootloader'
[3/19] Completed 'bootloader'
[4/19] Linking C static library esp-idf/driver/libdriver.a
[5/19] Linking C static library esp-idf/esp_lcd/libesp_lcd.a
[6/19] Linking C static library esp-idf/protocomm/libprotocomm.a
[7/19] Linking C static library esp-idf/fatfs/libfatfs.a
[8/19] Linking C static library esp-idf/espressif__esp_lcd_ili9341/libespressif__esp_lcd_ili9341.a
[9/19] Linking C static library esp-idf/espressif__esp_lcd_touch/libespressif__esp_lcd_touch.a
[10/19] Linking C static library esp-idf/espressif__esp_lcd_touch_gt911/libespressif__esp_lcd_touch_gt911.a
[11/19] Linking C static library esp-idf/espressif__esp_lvgl_port/libespressif__esp_lvgl_port.a
[12/19] Linking C static library esp-idf/espressif__esp_lcd_touch_tt21100/libespressif__esp_lcd_touch_tt21100.a
[13/19] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/nhat/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/nhat/esp/myGUI/build/config -I/home/nhat/esp/myGUI/main -I/home/nhat/esp/esp-idf/components/newlib/platform_include -I/home/nhat/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/nhat/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/nhat/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/nhat/esp/esp-idf/components/freertos/esp_additions/include -I/home/nhat/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/nhat/esp/esp-idf/components/esp_hw_support/include -I/home/nhat/esp/esp-idf/components/esp_hw_support/include/soc -I/home/nhat/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/nhat/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/nhat/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/nhat/esp/esp-idf/components/heap/include -I/home/nhat/esp/esp-idf/components/log/include -I/home/nhat/esp/esp-idf/components/soc/include -I/home/nhat/esp/esp-idf/components/soc/esp32 -I/home/nhat/esp/esp-idf/components/soc/esp32/include -I/home/nhat/esp/esp-idf/components/hal/esp32/include -I/home/nhat/esp/esp-idf/components/hal/include -I/home/nhat/esp/esp-idf/components/hal/platform_port/include -I/home/nhat/esp/esp-idf/components/esp_rom/include -I/home/nhat/esp/esp-idf/components/esp_rom/include/esp32 -I/home/nhat/esp/esp-idf/components/esp_rom/esp32 -I/home/nhat/esp/esp-idf/components/esp_common/include -I/home/nhat/esp/esp-idf/components/esp_system/include -I/home/nhat/esp/esp-idf/components/esp_system/port/soc -I/home/nhat/esp/esp-idf/components/esp_system/port/include/private -I/home/nhat/esp/esp-idf/components/xtensa/include -I/home/nhat/esp/esp-idf/components/xtensa/esp32/include -I/home/nhat/esp/esp-idf/components/lwip/include -I/home/nhat/esp/esp-idf/components/lwip/include/apps -I/home/nhat/esp/esp-idf/components/lwip/include/apps/sntp -I/home/nhat/esp/esp-idf/components/lwip/lwip/src/include -I/home/nhat/esp/esp-idf/components/lwip/port/include -I/home/nhat/esp/esp-idf/components/lwip/port/freertos/include -I/home/nhat/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/nhat/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/nhat/esp/myGUI/components/lvgl__lvgl -I/home/nhat/esp/myGUI/components/lvgl__lvgl/src -I/home/nhat/esp/myGUI/components -I/home/nhat/esp/myGUI/components/lvgl__lvgl/examples -I/home/nhat/esp/myGUI/components/lvgl__lvgl/demos -I/home/nhat/esp/esp-idf/components/esp_timer/include -I/home/nhat/esp/esp-idf/components/driver/include -I/home/nhat/esp/esp-idf/components/driver/deprecated -I/home/nhat/esp/esp-idf/components/driver/analog_comparator/include -I/home/nhat/esp/esp-idf/components/driver/dac/include -I/home/nhat/esp/esp-idf/components/driver/gpio/include -I/home/nhat/esp/esp-idf/components/driver/gptimer/include -I/home/nhat/esp/esp-idf/components/driver/i2c/include -I/home/nhat/esp/esp-idf/components/driver/i2s/include -I/home/nhat/esp/esp-idf/components/driver/ledc/include -I/home/nhat/esp/esp-idf/components/driver/mcpwm/include -I/home/nhat/esp/esp-idf/components/driver/parlio/include -I/home/nhat/esp/esp-idf/components/driver/pcnt/include -I/home/nhat/esp/esp-idf/components/driver/rmt/include -I/home/nhat/esp/esp-idf/components/driver/sdio_slave/include -I/home/nhat/esp/esp-idf/components/driver/sdmmc/include -I/home/nhat/esp/esp-idf/components/driver/sigma_delta/include -I/home/nhat/esp/esp-idf/components/driver/spi/include -I/home/nhat/esp/esp-idf/components/driver/temperature_sensor/include -I/home/nhat/esp/esp-idf/components/driver/touch_sensor/include -I/home/nhat/esp/esp-idf/components/driver/twai/include -I/home/nhat/esp/esp-idf/components/driver/uart/include -I/home/nhat/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/nhat/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/nhat/esp/esp-idf/components/esp_pm/include -I/home/nhat/esp/esp-idf/components/esp_ringbuf/include -I/home/nhat/esp/esp-idf/components/esp_lcd/include -I/home/nhat/esp/esp-idf/components/esp_lcd/interface -I/home/nhat/esp/myGUI/components/espressif__esp_lvgl_port/include -I/home/nhat/esp/myGUI/components/espressif__esp_lcd_ili9341/include -I/home/nhat/esp/myGUI/components/espressif__esp_lcd_touch/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/nhat/esp/myGUI=. -fmacro-prefix-map=/home/nhat/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -DESP_LCD_ILI9341_VER_MAJOR=1 -DESP_LCD_ILI9341_VER_MINOR=2 -DESP_LCD_ILI9341_VER_PATCH=0 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/nhat/esp/myGUI/main/main.c
/home/nhat/esp/myGUI/main/main.c: In function 'app_lcd_init':
/home/nhat/esp/myGUI/main/main.c:41:38: error: 'GPIO_NUM_45' undeclared (first use in this function); did you mean 'GPIO_NUM_35'?
   41 | #define EXAMPLE_LCD_GPIO_BL         (GPIO_NUM_45)
      |                                      ^~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:69:33: note: in expansion of macro 'EXAMPLE_LCD_GPIO_BL'
   69 |         .pin_bit_mask = 1ULL << EXAMPLE_LCD_GPIO_BL
      |                                 ^~~~~~~~~~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:41:38: note: each undeclared identifier is reported only once for each function it appears in
   41 | #define EXAMPLE_LCD_GPIO_BL         (GPIO_NUM_45)
      |                                      ^~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:69:33: note: in expansion of macro 'EXAMPLE_LCD_GPIO_BL'
   69 |         .pin_bit_mask = 1ULL << EXAMPLE_LCD_GPIO_BL
      |                                 ^~~~~~~~~~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:38:38: error: 'GPIO_NUM_48' undeclared (first use in this function); did you mean 'GPIO_NUM_38'?
   38 | #define EXAMPLE_LCD_GPIO_RST        (GPIO_NUM_48)
      |                                      ^~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:99:27: note: in expansion of macro 'EXAMPLE_LCD_GPIO_RST'
   99 |         .reset_gpio_num = EXAMPLE_LCD_GPIO_RST,
      |                           ^~~~~~~~~~~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c: At top level:
/home/nhat/esp/myGUI/main/main.c:60:20: warning: 'lvgl_touch_indev' defined but not used [-Wunused-variable]
   60 | static lv_indev_t *lvgl_touch_indev = NULL;
      |                    ^~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
